src/app/components/skeleton/skeleton.css
.sketelon-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 8px;
    margin: 0 24px;
    padding: 24px 0;
  }
  
  .skeleton-image {
    width: 180px;
    height: 112.5px;
    border-radius: 10px;
    margin-bottom: 8px;
    background-color: #292929;
  
    @media (min-width: 768px) {
      width: 300px;
      height: 168.75px;
    }
  }
  
  .skeleton-detail {
    height: 4px;
    width: 180px;
    background-color: #292929;
  
    @media (min-width: 768px) {
      width: 250px;
      height: 8px;
    }
  }
  

